--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,6 @@
 .show-des-en {width:700px; margin-top:60px; text-align:left; float:left;}
 .show-des-fa {width:700px; margin-top:60px; text-align:right; float:right; margin-right:100px}
 
-.container1 {width: 100%; background:url(headBg.png) repeat-x;}
-
+.container1 {width:100%; background:url(headBg.png) repeat-x; margin-top:-160px}
+.sliderr {margin-top:100px}
  
