--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,10 +12,8 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    
-    .container1
-      .main
-        = render "shared/menu_bar" 
+    .container
+      = render "shared/menu_bar" 
       =yield      
       = render 'shared/footer'  
       
