--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,7 +17,7 @@ li											{list-style:none}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 #head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:160px; height:36px; margin-top:50px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:200px; height:131px; margin-top:10px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:500px; height:30px; margin-top:45px; float:right}
 #head ul li									{width:auto; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
@@ -74,11 +74,11 @@ ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px;
 ul#infoPan li p a             {font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
 ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;}
 
-#quotPan									{width:100%; height:80px; margin-top:20px; float:right; position:relative;  border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
-#quotPan h3									{width:274px; margin:14px 0 0 24px; float:left; line-height:45px}
-#quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
-#quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
-#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+#quotPan									{width:100%; text-align:center; height:80px; margin-top:20px; float:right; position:relative;  border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
+#quotPan h3									{width:274px; margin:14px 0 0 24px; float:right; line-height:45px}
+#quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
+#quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
 #quotPan input.btn:active					{background-position:1px 1px}
 
 #blog										{width:506px; margin-top:24px; float:left}
@@ -95,15 +95,18 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #latest ul li a								{width:auto; margin-top:25px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#848484; line-height:24px}
 #latest ul li p								{width:100%; margin-top:16px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c; line-height:16px}	
 
-#foot										{width:100%; height:163px; float:left; background:url(footBg.png) repeat-x }
-#foot_cen									{width:800px; margin:28px auto 0 auto}
-#foot h6									{width:160px; height:36px; margin:0 auto; text-indent:-9999px; background:url(logo.png) no-repeat}
+.foot-logo {float:right; width:25%;  margin-top:0px; height:100px}
+.foot-link {float:right; width:70%;  margin-top:20px}
+
+#foot										{width:100%; height:153px; float:left; background:url(footBg.png) repeat-x }
+#foot_cen									{width:800px; margin:5px auto 0 auto}
+#foot h6									{width:200px; height:131px; text-indent:-9999px; background:url(logo.png) no-repeat}
 #foot h6 a									{width:100%; height:100%; float:left}
-#foot ul									{width:400px; margin:11px auto 0 auto}
+#foot ul									{float: left; width:400px; margin:11px auto 0 auto}
 #foot ul li									{width:auto; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px}
 #foot ul li a								{width:auto; float:left; color:inherit}
 #foot ul li.space							{width:auto; float:left; padding:0 6px}
-#foot p										{width:100%; margin-top:10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px; text-align:center}
+#foot p										{width:75%; margin-top:10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:14px; color:#767676; line-height:18px; text-align:center}
 #foot p	a									{color:inherit}
 
 #service_pan								{width:100%; margin-top:20px; float:left}
