--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -1,10 +1,13 @@
-= flash[:notice]
-= form_tag create_session_path do 
-  .field
-    User name:
-    = text_field_tag :name
-  .field
-    password
-    = password_field_tag :password  
-  .actions
-    = submit_tag "login"
+#welcom_pan
+  #quotPan
+    %h3
+      %span="ورود مدیریت به"
+      سایت
+    = flash[:notice]
+    = form_tag create_session_path do 
+      .field
+        = text_field_tag :name, "نام کاربری را وارد کنید",:class => "txt"      
+        = password_field_tag :password,"رمز عبور خود را وارد کنید" ,{:class => "txt"}      
+        = submit_tag "ورود", {:class => "btn"}
+    
+   
