--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,7 +17,7 @@ li											{list-style:none}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Nazli"; font-size:16px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:150px; height:100px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:150px; height:200px; margin-top:5px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:580px;  height:30px; margin-top:53px; float:right;text-align:center; margin-right:110px}
 #head ul li									{width:110px; height:30px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center}
@@ -74,8 +74,9 @@ a.btn {height:30px;}
 a.btn span{text-decoration:none; color:#7DDC1F; }
 
 .foot-logo { width:80%; margin-right:20%; margin-top:0px; height:60px; }
-.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:50px; width:100px; }
+.foot-logo p.h6{background:url(logoft.png) no-repeat; position:relative; height:90px; width:100px; }
 .foot-link { width:80%; margin-right:40%; text-align:left}
+.foot-link p {margin:0px}
 
 #foot										{width:100%; height:120px; float:left; text-align:center}
 #foot_cen									{width:800px;}
