--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -22,7 +22,19 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:600px;  height:50px;float:left;text-align:center; margin-left:30px}
 #head ul li									{width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
 #head ul li:first-child						{margin-left:1px;}
-#head ul li	a,#head ul li a.active			{width:110px; height:30px; float:left;  color:inherit;text-align:center; margin-top:90px}
+#head ul li	a,#head ul li a.active			{width:110px; height:30px; float:left;  color:inherit;text-align:center; margin-top:90px;
+-webkit-transition-property:color, text;
+-webkit-transition-duration: .5s, 1s;
+-webkit-transition-timing-function: linear, ease-in;
+
+-moz-transition-property:color, text;
+-moz-transition-duration:.5s;
+-moz-transition-timing-function: linear, ease-in;
+
+-o-transition-property:color, text;
+-o-transition-duration:.5s;
+-o-transition-timing-function: linear, ease-in;
+}
 #head ul li	a:hover,#head ul li a.active	{color:#7ddc1f; height:30px;background:#272727; text-align:center; text-decoration:none;}
 
 #cu3er-container							{width:800px; height:360 px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
