--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -7,22 +7,22 @@ img											{border:0}
 li											{list-style:none}
 
 #head										{width:100%; }
-.head_height								{height:160px; position:fix}
+.head_height								{height:160px; max-height:160px;}
 .head_pad									{padding-bottom:30px}
-
+#head-menu { max-width:900px; text-align:center; margin-right:150px; font-size:16px; margin-bottom:20px}
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
-#head p.search								{Fwidth:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Nazli"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
+#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Nazli"; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Nazli"; font-size:16px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{margin-bottom:25px; margin-right:-250px; width:380px; height:130px; margin-top:5px; float:right; background:url(logo.png) no-repeat}
-h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
-#head ul									{width:600px;  height:50px;float:left;text-align:center; margin-left:30px}
-#head ul li									{width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
+h1.logo										{margin-bottom:5px; margin-right:20px; width:130px; max-width:130px;height:130px; margin-top:5px; float:right; background:url(logo.png) no-repeat}
+h1.logo a									{max-width:600px; height:100%; float:left; text-indent:-9999px}
+#head ul									{max-width:560px;height:50px;float:left;text-align:center; margin-left:80px}
+#head ul li									{max-width:110px; height:120px; margin-left:1px; float:right; font-family:"Nazli"; font-size:16px; color:#5f5f5f; line-height:20px; text-transform:uppercase; text-align:center;  background:#272727; }
 #head ul li:first-child						{margin-left:1px;}
-#head ul li	a,#head ul li a.active			{width:110px; height:30px; float:left;  color:inherit;text-align:center; margin-top:90px;
+#head ul li	a,#head ul li a.active			{width:110px; max-width:100%;height:30px; float:left;  color:inherit;text-align:center; margin-top:90px;
 -webkit-transition-property:color, text;
 -webkit-transition-duration: .5s, 1s;
 -webkit-transition-timing-function: linear, ease-in;
@@ -120,7 +120,7 @@ a.btn span{text-decoration:none; color:#7DDC1F; }
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Nazli"; font-size:16px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; color:#029743; margin-right:10px}
 
-.div-slider {float:right;width:75%; margin-right:13%; margin-top:-20px; height:480px}
+.div-slider {float:right;width:75%; margin-right:13%; height:480px}
 .div_pic {margin-top:20px;width:100%;  height:250px; }
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x; font-family:"Nazli"; font-size:16px }
@@ -136,7 +136,7 @@ border: thin solid white;
 scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-color: #336699;
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
 scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; height:200px; margin:10px; }
-#head-menu { width:70%; text-align:center; margin-right:150px; font-size:16px}
+
 
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
